--- a/package.json
+++ b/package.json
@@ -5,16 +5,22 @@
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
-    "@babel/preset-react": "^7.14.5",
     "@rollup/plugin-alias": "^3.1.2",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
+    "@vue/babel-plugin-jsx": "^1.0.6",
+    "@vue/compiler-sfc": "^3.1.4",
     "rollup": "^2.52.7",
-    "rollup-plugin-external-globals": "^0.6.1"
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-external-globals": "^0.6.1",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "rollup-plugin-vue": "^6.0.0-beta.10",
+    "typescript": "^4.3.5",
+    "vue": "^3.1.4"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "vue": "^3.1.4"
   }
 }
