--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "dev": "rollup -w -c ./scripts/rollup.config.js",
-    "build": "rollup -c ./scripts/rollup.config.js"
+    "build": "rollup -c ./scripts/rollup.config.js",
+    "server": "node ./server/index.js"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -12,15 +13,16 @@
     "@rollup/plugin-replace": "^2.4.2",
     "@vue/babel-plugin-jsx": "^1.0.6",
     "@vue/compiler-sfc": "^3.1.4",
-    "koa": "^2.13.1",
+    "@vue/server-renderer": "^3.1.4",
     "rollup": "^2.52.7",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-external-globals": "^0.6.1",
     "rollup-plugin-postcss": "^4.0.0",
-    "rollup-plugin-vue": "^6.0.0-beta.10",
-    "vue": "^3.1.4"
+    "rollup-plugin-vue": "^6.0.0-beta.10"
   },
   "dependencies": {
+    "@vue/server-renderer": "^3.1.4",
+    "koa": "^2.13.1",
     "vue": "^3.1.4"
   }
 }
