--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
-    "@rollup/plugin-alias": "^3.1.2",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
+    "postcss": "^8.3.5",
+    "requirejs": "^2.3.6",
     "rollup": "^2.52.7",
-    "rollup-plugin-external-globals": "^0.6.1"
+    "rollup-plugin-external-globals": "^0.6.1",
+    "rollup-plugin-postcss": "^4.0.0"
   },
   "dependencies": {
     "react": "^17.0.2",
