--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "scripts": {
-    "dev": "rollup -w -c ./scripts/rollup.config.js"
+    "dev": "rollup -w -c ./scripts/rollup.config.js",
+    "build": "rollup -c ./scripts/rollup.config.js",
+    "server": "node ./server/index.js"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -16,6 +18,7 @@
     "rollup-plugin-postcss": "^4.0.0"
   },
   "dependencies": {
+    "koa": "^2.13.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
