--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "scripts": {
     "w": "node ./src/write.js",
     "es": "node ./src/es.js",
+    "es2": "node ./src/es2.js",
+    "es3": "node ./src/es3.js",
     "r": "node ./src/read.js"
   },
   "devDependencies": {
