--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css-loader": "^6.2.0",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
+    "mini-css-extract-plugin": "^2.1.0",
     "style-loader": "^3.2.1",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
