--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@loadable/component": "^5.15.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
