--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
     "@vue/babel-plugin-jsx": "^1.0.6",
     "@vue/compiler-sfc": "^3.1.1",
     "@webpack-cli/serve": "^1.5.1",
@@ -17,6 +20,8 @@
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
     "style-loader": "^3.2.1",
+    "ts-loader": "^9.2.5",
+    "typescript": "^4.4.2",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
