--- a/package.json
+++ b/package.json
@@ -1,3 +1,84 @@
 {
-  
+  "main": "lib/index.js",
+  "module": "es/index.js",
+  "unpkg": "dist/index.min.js",
+  "typings": "lib/index.d.ts",
+  "files": [
+    "dist",
+    "lib",
+    "es"
+  ],
+  "scripts": {
+    "dev": "webpack serve --host 0.0.0.0 -c ./scripts/webpack.dev.config.js",
+    "build": "npm run build:compile && npm run build:dist",
+    "build:compile": "node ./scripts/build.js compile",
+    "build:dist": "node --max_old_space_size=8192 ./scripts/build.js dist"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.5",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
+    "@babel/plugin-proposal-export-default-from": "^7.14.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.14.5",
+    "@babel/plugin-transform-member-expression-literals": "^7.14.5",
+    "@babel/plugin-transform-object-assign": "^7.14.5",
+    "@babel/plugin-transform-property-literals": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/plugin-transform-spread": "^7.14.5",
+    "@babel/plugin-transform-template-literals": "^7.14.5",
+    "@babel/plugin-transform-typescript": "^7.14.5",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
+    "@octokit/rest": "^18.5.6",
+    "@types/react": "^17.0.17",
+    "@types/react-dom": "^17.0.9",
+    "autoprefixer": "^10.2.6",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-import": "^1.13.3",
+    "babel-plugin-inline-import-data-uri": "^1.0.1",
+    "babel-plugin-istanbul": "^6.0.0",
+    "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "chalk": "^4.1.1",
+    "colorful": "^2.1.0",
+    "compare-versions": "^3.6.0",
+    "css-loader": "^5.2.6",
+    "file-loader": "^6.2.0",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-strip-code": "^0.1.4",
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "html-webpack-plugin": "^5.3.1",
+    "ignore-emit-webpack-plugin": "^2.0.6",
+    "less": "^4.1.1",
+    "less-loader": "^8.1.1",
+    "less-plugin-npm-import": "^2.1.0",
+    "less-vars-to-js": "^1.3.0",
+    "merge2": "^1.4.1",
+    "mini-css-extract-plugin": "^1.6.0",
+    "minimist": "^1.2.5",
+    "object-assign": "^4.1.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.6",
+    "postcss": "^8.3.1",
+    "postcss-loader": "^5.3.0",
+    "raw-loader": "^4.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "rimraf": "^3.0.2",
+    "style-loader": "^2.0.0",
+    "through2": "^4.0.2",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.2",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.8.0",
+    "webpackbar": "^5.0.0-3"
+  }
 }
