--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "scripts": {
     "db": "node ./src/database.js",
     "tb": "node ./src/table.js",
-    "data": "node ./src/data.js"
+    "data": "node ./src/data.js",
+    "test": "mocha --exit ./__tests__/"
   },
   "dependencies": {
     "moment": "^2.29.1",
     "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.1.3"
   }
 }
