--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,19 +18,21 @@ jobs:
       matrix:
         node-version: [16.x]
     steps:
-  #   - uses: actions/checkout@v2
-  #   - name: Use Node.js ${{ matrix.node-version }}
-  #     uses: actions/setup-node@v2
-  #     with:
-  #       node-version: ${{ matrix.node-version }}
-  #       cache: 'npm'
-  #   - run: npm install
-  #  # - run: npm run build --if-present
-  #   - run: npm test
 
     - uses: actions/checkout@v2
+    - name: Use MySQL
     - uses: shogo82148/actions-setup-mysql@v1
       with:
         mysql-version: '8.0'
     - run: mysql -uroot -h127.0.0.1 -e 'SELECT version()'
+
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm install
+    # - run: npm run build --if-present
+    - run: npm test
     
