--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,16 +23,12 @@ jobs:
       with:
         mysql-version: '8.0'
     - run: mysql -uroot -h127.0.0.1 -e 'SELECT version()'
-
-    
-
-    # # Nodejs
-    # - name: Use Node.js ${{ matrix.node-version }}
-    # - uses: actions/setup-node@v2
-    #   with:
-    #     node-version: ${{ matrix.node-version }}
-    #     cache: 'npm'
-    # - run: npm install
-    # # - run: npm run build --if-present
-    # - run: npm test
+    - name: Use Node.js ${{ matrix.node-version }}
+    - uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm install
+    # - run: npm run build --if-present
+    - run: npm test
     
