--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,12 +22,13 @@ jobs:
     - uses: shogo82148/actions-setup-mysql@v1
       with:
         mysql-version: '8.0'
-    - run: mysql -uroot -h127.0.0.1 -e 'SELECT version()'
-    - uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        # cache: 'npm'
-    - run: npm install
-    # - run: npm run build --if-present
-    - run: npm test
+        root-password: 'abcd1234',
+    - run: mysql -uroot -pabcd1234 -h127.0.0.1 -e 'SELECT version()'
+    # - uses: actions/setup-node@v2
+    #   with:
+    #     node-version: ${{ matrix.node-version }}
+    #     # cache: 'npm'
+    # - run: npm install
+    # # - run: npm run build --if-present
+    # - run: npm test
     
