--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,7 +22,7 @@ jobs:
     - uses: shogo82148/actions-setup-mysql@v1
       with:
         mysql-version: '8.0'
-        root-password: 'abcd1234',
+        root-password: 'abcd1234'
     - run: mysql -uroot -pabcd1234 -h127.0.0.1 -e 'SELECT version()'
     # - uses: actions/setup-node@v2
     #   with:
