--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,11 +24,11 @@ jobs:
         mysql-version: '8.0'
         root-password: 'abcd1234'
     - run: mysql -uroot -pabcd1234 -h127.0.0.1 -e 'SELECT version()'
-    # - uses: actions/setup-node@v2
-    #   with:
-    #     node-version: ${{ matrix.node-version }}
-    #     # cache: 'npm'
-    # - run: npm install
-    # # - run: npm run build --if-present
-    # - run: npm test
+    - uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        # cache: 'npm'
+    - run: npm install
+    # - run: npm run build --if-present
+    - run: npm test
     
