--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,8 +22,8 @@ jobs:
     - uses: shogo82148/actions-setup-mysql@v1
       with:
         mysql-version: '8.0'
-        root-password: 'abcd1234'
-    - run: mysql -uroot -pabcd1234 -h127.0.0.1 -e 'SELECT version()'
+        root-password: ${{ secrets.DatabasePassword }}
+    - run: mysql -uroot -p${{ secrets.DatabasePassword }} -h127.0.0.1 -e 'SELECT version()'
     - uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
