--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "start": "node ./src/main.js",
-    "test": "mocha --exit ./__tests__/"
+    "test": "nyc --reporter=html --reporter=text mocha --exit ./__tests__/"
   },
   "dependencies": {
     "moment": "^2.29.1",
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.4",
-    "mocha": "^9.1.3"
+    "mocha": "^9.1.3",
+    "nyc": "^15.1.0"
   }
 }
