--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "node ./src/main.js",
+    "start": "ts-node ./src/main.ts",
     "test": "nyc --reporter=html --reporter=text mocha --exit ./__tests__/*.test.js"
   },
   "dependencies": {
@@ -8,8 +8,13 @@
     "mysql": "^2.18.1"
   },
   "devDependencies": {
+    "@swc/core": "^1.2.105",
+    "@swc/wasm": "^1.2.102",
+    "@types/mysql": "^2.15.19",
+    "@types/node": "^16.11.6",
     "chai": "^4.3.4",
     "mocha": "^9.1.3",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "ts-node": "^10.4.0"
   }
 }
