--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "mocha --exit ./__tests__/"
+    "test": "nyc mocha --exit ./__tests__/"
   },
   "dependencies": {
     "koa": "^2.13.4"
@@ -8,6 +8,7 @@
   "devDependencies": {
     "chai": "^4.3.4",
     "mocha": "^9.1.3",
+    "nyc": "^15.1.0",
     "supertest": "^6.1.6"
   }
 }
