--- a/package.json
+++ b/package.json
@@ -1,11 +1,5 @@
 {
   "scripts": {
-<<<<<<< HEAD
-    "test": "node ./test.js"
-  },
-  "devDependencies": {
-    "koa-compose": "^4.1.0"
-=======
     "dev": "webpack serve -c ./scripts/webpack.dev.config.js",
     "build": "webpack -c ./scripts/webpack.prod.config.js"
   },
@@ -25,6 +19,7 @@
     "css-loader": "^5.2.6",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
+    "mini-css-extract-plugin": "^2.4.4",
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
     "typescript": "^4.4.2",
@@ -38,6 +33,5 @@
     "react-dom": "^17.0.2",
     "requirejs": "^2.3.6",
     "vue": "^3.1.1"
->>>>>>> ts-react-webpack
   }
 }
