--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "scripts": {
-    "dev": "webpack serve -c ./scripts/webpack.dev.config.js",
-    "build": "webpack -c ./scripts/webpack.prod.config.js"
+    "dev": "ts-node ./scripts/dev.ts",
+    "build": "ts-node ./scripts/build.ts"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
+    "@types/mini-css-extract-plugin": "^2.4.0",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
+    "@types/webpack-dev-server": "^4.3.1",
     "@vue/babel-plugin-jsx": "^1.0.6",
     "@vue/compiler-sfc": "^3.1.1",
     "@webpack-cli/serve": "^1.5.1",
@@ -25,13 +25,15 @@
     "typescript": "^4.4.2",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2",
+    "webpack-dev-server": "^4.5.0",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@swc/core": "^1.2.108",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "requirejs": "^2.3.6",
+    "ts-node": "^10.4.0",
     "vue": "^3.1.1"
   }
 }
