--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "scripts": {
+    "dev:server": "ts-node ./src/server/index.ts",
     "dev:front": "ts-node ./scripts/dev-front.ts",
     "build:front": "ts-node ./scripts/build-front.ts"
   },
@@ -9,6 +10,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@types/mini-css-extract-plugin": "^2.4.0",
+    "@types/node": "^16.11.7",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "@types/webpack-dev-server": "^4.3.1",
