--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "dev:server": "ts-node ./src/server/index.ts",
+    "build:server": "rollup --config ./scripts/rollup.config.ts --configPlugin typescript",
     "dev:front": "ts-node ./scripts/dev-front.ts",
     "build:front": "ts-node ./scripts/build-front.ts"
   },
@@ -9,6 +10,8 @@
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
+    "@rollup/plugin-typescript": "^8.3.0",
+    "@swc/core": "^1.2.108",
     "@types/mini-css-extract-plugin": "^2.4.0",
     "@types/node": "^16.11.7",
     "@types/react": "^17.0.19",
@@ -22,20 +25,18 @@
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
     "mini-css-extract-plugin": "^2.4.4",
+    "rollup": "^2.60.0",
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
-    "typescript": "^4.4.2",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^4.5.0",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@swc/core": "^1.2.108",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "requirejs": "^2.3.6",
-    "ts-node": "^10.4.0",
-    "vue": "^3.1.1"
+    "react-dom": "^17.0.2"
   }
 }
