--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "version": "0.0.1",
   "scripts": {
     "dev:server": "ts-node ./src/server/index.ts",
     "build:server": "rollup --config ./scripts/rollup.config.ts --configPlugin typescript",
     "dev:front": "ts-node ./scripts/dev-front.ts",
-    "build:front": "ts-node ./scripts/build-front.ts"
+    "build:front": "ts-node ./scripts/build-front.ts",
+    "debug:server": "node -r ts-node/register --inspect ./src/server/index.ts",
+    "dev:cli:abc": "ts-node ./src/cli/index.ts init ./hello"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -12,6 +15,7 @@
     "@babel/preset-typescript": "^7.15.0",
     "@rollup/plugin-typescript": "^8.3.0",
     "@swc/core": "^1.2.108",
+    "@types/inquirer": "^8.1.3",
     "@types/mini-css-extract-plugin": "^2.4.0",
     "@types/node": "^16.11.7",
     "@types/react": "^17.0.19",
@@ -36,6 +40,8 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "commander": "^8.3.0",
+    "inquirer": "^8.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
