--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "version": "0.0.1",
   "scripts": {
     "dev:server": "ts-node ./src/server/index.ts",
-    "build:server": "rollup --config ./scripts/rollup.config.ts --configPlugin typescript",
+    "build:server": "rollup --config ./scripts/build-server.ts --configPlugin typescript",
     "dev:front": "ts-node ./scripts/dev-front.ts",
     "build:front": "ts-node ./scripts/build-front.ts",
     "debug:server": "node -r ts-node/register --inspect ./src/server/index.ts",
-    "dev:cli:abc": "ts-node ./src/cli/index.ts init ./hello"
+    "dev:cli:abc": "ts-node ./src/cli/index.ts init ./hello",
+    "build:cli": "rollup --config ./scripts/build-cli.ts --configPlugin typescript"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-typescript": "^8.3.0",
     "@swc/core": "^1.2.108",
     "@types/inquirer": "^8.1.3",
