--- a/package.json
+++ b/package.json
@@ -10,27 +10,24 @@
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
-    "@types/react": "^17.0.19",
-    "@types/react-dom": "^17.0.9",
-    "@vue/babel-plugin-jsx": "^1.0.6",
-    "@vue/compiler-sfc": "^3.1.1",
+    "@types/react": "^17.0.35",
+    "@types/react-dom": "^17.0.11",
     "@webpack-cli/serve": "^1.5.1",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
+    "mini-css-extract-plugin": "^2.4.5",
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
     "typescript": "^4.4.2",
-    "webpack": "^5.40.0",
+    "webpack": "^5.64.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "requirejs": "^2.3.6",
-    "vue": "^3.1.1"
+    "react-dom": "^17.0.2"
   }
 }
