--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "dev": "rollup -w -c ./scripts/rollup.config.js",
     "build": "rollup -c ./scripts/rollup.config.js",
-    "server": "node ./server/index.js"
+    "server": "node ./script/server.js"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -11,6 +11,8 @@
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/pluginutils": "^4.1.1",
+    "magic-string": "^0.25.7",
     "postcss": "^8.3.5",
     "requirejs": "^2.3.6",
     "rollup": "^2.52.7",
