--- a/package.json
+++ b/package.json
@@ -1,3 +1,11 @@
 {
-  
+  "scripts": {
+    "dev": "node ./src/index.js"
+  },
+  "dependencies": {
+    "@koa/router": "^10.1.1",
+    "is-type-of": "^1.2.1",
+    "koa": "^2.13.4",
+    "ready-callback": "^2.1.0"
+  }
 }
