--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   },
   "dependencies": {
     "@koa/router": "^10.1.1",
+    "globby": "^8.0.2",
     "is-type-of": "^1.2.1",
     "koa": "^2.13.4",
-    "ready-callback": "^2.1.0"
+    "ready-callback": "^2.1.0",
+    "utility": "^1.17.0"
   }
 }
