--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -2,5 +2,9 @@
   "type": "module",
   "scripts": {
     "build": "node ./scripts/build.js"
+  },
+  "devDependencies": {
+    "@babel/generator": "^7.16.7",
+    "@babel/parser": "^7.16.7"
   }
 }
