--- a/package.json
+++ b/package.json
@@ -1,3 +1,23 @@
 {
-  
+  "name": "name",
+  "version": "0.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "build": "node ./scripts/build.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/**/**.git"
+  },
+  "author": "",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/**/**/issues"
+  },
+  "homepage": "https://github.com/**/**#readme",
+  "devDependencies": {
+    "glob": "^7.2.0",
+    "typescript": "^4.5.4"
+  }
 }
