--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.8",
     "@babel/preset-typescript": "^7.16.7",
+    "chalk": "^4.1.2",
+    "enquirer": "^2.3.6",
     "glob": "^7.2.0",
     "typescript": "^4.5.4",
     "vite": "^2.7.12"
