--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "react-dom": "^17.0.2",
     "typescript": "^4.5.4",
     "vite": "^2.7.12"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
