--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "devDependencies": {
     "heapdump": "^0.3.15",
+    "koa-static": "^5.0.0",
     "v8-profiler-node8": "^6.3.0"
+  },
+  "dependencies": {
+    "koa": "^2.13.4"
   }
 }
