--- a/package.json
+++ b/package.json
@@ -42,5 +42,13 @@
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "dependencies": {
+    "@emotion/css": "^11.7.1",
+    "is-hotkey": "^0.2.0",
+    "material-icons": "^1.10.7",
+    "slate": "^0.73.1",
+    "slate-history": "^0.66.0",
+    "slate-react": "^0.73.0"
   }
 }
