--- a/package.json
+++ b/package.json
@@ -28,19 +28,21 @@
     "@babel/preset-env": "^7.16.8",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.13",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "glob": "^7.2.0",
     "less": "^4.1.2",
     "open": "^8.4.0",
     "react": "^17.0.2",
+    "react-dnd-html5-backend": "^15.1.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.5.4",
     "vite": "^2.7.12"
   },
-  "peerDependencies": {
+  "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-dnd": "^15.1.1"
   }
 }
