--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
     "vite": "^2.7.12"
   },
   "dependencies": {
+    "immutability-helper": "^3.1.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-dnd": "^15.1.1"
+    "react-dnd": "^15.1.1",
+    "react-dom": "^17.0.2"
   }
 }
