--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "less-loader": "^10.2.0",
     "mini-css-extract-plugin": "^2.6.0",
     "style-loader": "^2.0.0",
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.6.4",
     "vue-loader": "^16.8.3",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
