--- a/package.json
+++ b/package.json
@@ -1,3 +1,13 @@
 {
-  
+  "version": "0.0.0",
+  "scripts": {
+    "dev:server": "ts-node --project ./tsconfig.node.json ./packages/server/src/index.ts"
+  },
+  "devDependencies": {
+    "@tsconfig/node18": "^1.0.0",
+    "@types/node": "^17.0.40",
+    "ts-node": "^10.8.1",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.3"
+  }
 }
