--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "version": "0.0.0",
   "scripts": {
-    "dev:server": "ts-node --project ./tsconfig.node.json ./packages/server/src/index.ts"
+    "dev:server": "ts-node --project ./tsconfig.node.json ./packages/server/src/index.ts",
+    "build:node": "ts-node --project ./tsconfig.node.json ./scripts/build-node.ts"
   },
+  "files": [
+    "esm",
+    "lib"
+  ],
   "devDependencies": {
     "@tsconfig/node18": "^1.0.0",
+    "@types/glob": "^7.2.0",
     "@types/node": "^17.0.40",
+    "glob": "^8.0.3",
     "ts-node": "^10.8.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.3"
